add Japanse verion pages

--- a/index-ja.html
+++ b/index-ja.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>index.md</title>
+<title>index-ja.md</title>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 
 <style>
@@ -366,79 +366,79 @@ code {
     });
   </script>
 <h1 id="joe">Joe</h1>
-<h2 id="%F0%9F%93%8D-%F0%9F%94%97-linkedin--%F0%9F%94%97-english-cv-%F0%9F%94%97%E6%97%A5%E6%9C%AC%E8%AA%9E%E7%89%88%E5%B1%A5%E6%AD%B4%E6%9B%B8">📍 🔗 <a href="https://www.linkedin.com/in/mi-zhou-46553092/">LinkedIn</a> | 🔗 <a href="https://binartist.github.io/about-me/index.html">English CV</a> 🔗
-<a href="https://binartist.github.io/about-me/index-ja.html">日本語版履歴書</a></h2>
-<h2 id="professional-summary">Professional Summary</h2>
-<p>Innovative IT leader with 18+ years designing cloud-native systems, enterprise integrations, and agentic AI solutions that combine LLMs, vector search, and real‑time apps. Proven track record delivering scalable e‑commerce, finance, and logistics platforms across international teams; fluent in English and Chinese, intermediate in Japanese.</p>
+<p>📍 🔗 <a href="https://www.linkedin.com/in/mi-zhou-46553092/">LinkedIn</a> | 💻 🔗 <a href="https://binartist.github.io/about-me/index.html">English CV</a> | <a href="https://binartist.github.io/about-me/index-ja.html">日本語版履歴書</a></p>
 <hr>
-<h2 id="core-skills">Core Skills</h2>
-<p><strong>AI &amp; Data</strong></p>
-<ul>
-<li>LLM orchestration (LangChain, LangGraph, Salesforce Agentforce)</li>
-<li>Retrieval-Augmented Generation (RAG) with pgvector</li>
-<li>Embeddings, semantic similarity search, AI evaluation frameworks</li>
-<li>Applied AI in finance, e-commerce, and logistics</li>
-</ul>
-<p><strong>Fullstack &amp; DevOps</strong></p>
-<ul>
-<li>Python, Go, TypeScript (Node.js), Java</li>
-<li>Databases: PostgreSQL, MySQL, MongoDB, Redis</li>
-<li>Frontend: React, SvelteKit; Mobile: Flutter</li>
-<li>Cloud &amp; DevOps: Docker, Kubernetes, AWS (EC2, ALB, S3, Aurora, CloudWatch, IAM), GCP, Azure</li>
-<li>CI/CD with GitHub Actions; AWS CDK; built custom agentic AI assistants for automation</li>
-</ul>
-<p><strong>Enterprise Integration &amp; Leadership</strong></p>
-<ul>
-<li>Delivered global, cross-functional systems end-to-end</li>
-<li>Defined and governed large-scale APIs and canonical models</li>
-<li>Led migrations and modernization programs to cloud-native platforms</li>
-<li>Bridged cross-cultural stakeholders to align business and technical roadmaps</li>
-</ul>
+<h2 id="%E8%81%B7%E5%8B%99%E8%A6%81%E7%B4%84">職務要約</h2>
+<p>クラウドネイティブなシステム、エンタープライズ統合、そして LLM・ベクトル検索・リアルタイムアプリを組み合わせたエージェント型AIソリューションの設計に、18年以上の経験を持つイノベーティブなITリーダー。国際的なチームにおいて、スケーラブルな eコマース・金融・物流プラットフォームを継続して提供してきた実績。英語・中国語は流暢、日本語は中級。</p>
 <hr>
-<h2 id="selected-projects">Selected Projects</h2>
+<h2 id="%E4%B8%BB%E8%A6%81%E3%82%B9%E3%82%AD%E3%83%AB">主要スキル</h2>
+<p><strong>AI とデータ</strong></p>
 <ul>
-<li><a href="project-aihub.html">Agentic AI SaaS Platform</a> – multi-tenant RAG + agent workflow platform</li>
-<li><a href="project-eatease.html">Restaurant AI System</a> – QR ordering, dual AI assistants, multilingual ops</li>
-<li><a href="project-deploybot.html">DevOps Agent Tool</a> – conversational deployment &amp; diagnostics assistant</li>
-<li><a href="project-glob_ecom.html">Global E-commerce Localization</a> – in-country mirrors, BFF, edge caching</li>
-<li><a href="project-pet_ecom.html">Pet Industry Commerce Platform</a> – activity lifecycle digitization and engagement</li>
-<li><a href="project-edi.html">EDI Onboarding System</a> – AI-assisted schema mapping and partner acceleration</li>
+<li>LLM オーケストレーション（LangChain、LangGraph、Salesforce Agentforce）</li>
+<li>pgvector を用いた RAG（検索拡張生成）</li>
+<li>埋め込み、意味類似検索、AI 評価フレームワーク</li>
+<li>金融・EC・物流領域での AI 実装</li>
+</ul>
+<p><strong>フルスタック &amp; DevOps</strong></p>
+<ul>
+<li>Python、Go、TypeScript（Node.js）、Java</li>
+<li>データベース: PostgreSQL、MySQL、MongoDB、Redis</li>
+<li>フロントエンド: React、SvelteKit／モバイル: Flutter</li>
+<li>クラウド &amp; DevOps: Docker、Kubernetes、AWS（EC2、ALB、S3、Aurora、CloudWatch、IAM）、GCP、Azure</li>
+<li>GitHub Actions による CI/CD、AWS CDK、オートメーション向けカスタム エージェント型AIアシスタントの構築</li>
+</ul>
+<p><strong>エンタープライズ統合 &amp; リーダーシップ</strong></p>
+<ul>
+<li>グローバルかつクロスファンクショナルなシステムをエンドツーエンドで提供</li>
+<li>大規模 API とカノニカルモデルの定義・ガバナンス</li>
+<li>クラウドネイティブ化に向けた移行・モダナイゼーションを主導</li>
+<li>異文化のステークホルダー間の橋渡しを行い、ビジネス／技術ロードマップを整合</li>
 </ul>
 <hr>
-<h2 id="professional-experience">Professional Experience</h2>
-<p><strong>Application Architect &amp; Fullstack Developer</strong> – IBM China – <em>Present</em></p>
+<h2 id="%E4%B8%BB%E8%A6%81%E3%83%97%E3%83%AD%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88">主要プロジェクト</h2>
 <ul>
-<li>Led <strong>China localization for global e-commerce platforms</strong>, optimizing performance, data residency compliance, and regional UX adaptations (<a href="project-glob_ecom.html">project link</a>).</li>
-<li>Designed an <strong>agent-assisted EDI onboarding platform</strong>, automating canonical mapping for EDIFACT/X12 via AI-driven schema normalization (<a href="project-edi.html">project link</a>).</li>
-<li>Developed <strong>Agentforce workflows</strong> enabling insurance representatives to automate data capture, form validation, and regulatory updates.</li>
-<li>Directed <strong>multi-cloud migrations</strong> and implemented <strong>DevSecOps practices</strong>, improving security, observability, and CI/CD pipeline reliability.</li>
-</ul>
-<p><strong>Co-Founder / Technical Lead</strong> – SaasifyEase (Japan) – <em>2023–Present (Part-time, concurrent with IBM)</em></p>
-<ul>
-<li>Architected and launched a <strong>multi-tenant Agentic AI + RAG SaaS platform</strong> with access control, workspace isolation, knowledge ingestion, and retrieval orchestration (<a href="project-aihub.html">project link</a>).</li>
-<li>Built an end-to-end <strong>financial filings analytics pipeline</strong> (SEC 13F): ingestion → normalization → embeddings → portfolio insights.</li>
-<li>Delivered an <strong>AI-driven restaurant ordering &amp; operations system</strong>, integrating QR ordering, POS tablet flows, and dual AI assistants for users and staff (<a href="project-eatease.html">project link</a>).</li>
-<li>Created an experimental <strong>DevOps AI agent (DeployBot)</strong> enabling natural-language deployment operations — build, patch, redeploy, and log summaries (<a href="project-deploybot.html">project link</a>).</li>
-<li>Launched a <strong>pet-industry omni-channel platform</strong>, unifying content, activities, and commerce with AI-powered engagement tools (<a href="project-pet_ecom.html">project link</a>).</li>
-</ul>
-<p><strong>Software Engineer</strong> – Mahong Network Tech – <em>2007–2014</em></p>
-<ul>
-<li>Built cross-platform mobile applications during the transition from feature phones to iOS/Android.</li>
-<li>Contributed reusable mobile framework modules to accelerate application delivery.</li>
-<li>Specialized in <strong>UI optimization</strong>, <strong>performance tuning</strong>, and iterative release process improvements.</li>
+<li><a href="project-aihub-ja.html">エージェント型 AI SaaS プラットフォーム</a> – マルチテナント RAG ＋ エージェント ワークフロー プラットフォーム</li>
+<li><a href="project-eatease-ja.html">レストラン向け AI システム</a> – QR 注文、デュアル AI アシスタント、多言語オペレーション</li>
+<li><a href="project-deploybot-ja.html">DevOps エージェント ツール</a> – 会話型のデプロイ／診断アシスタント</li>
+<li><a href="project-glob_ecom-ja.html">グローバル EC のローカライゼーション</a> – 現地ミラー、BFF、エッジキャッシング</li>
+<li><a href="project-pet_ecom-ja.html">ペット産業向けコマース基盤</a> – アクティビティのライフサイクルのデジタル化とエンゲージメント</li>
+<li><a href="project-edi-ja.html">EDI オンボーディング システム</a> – AI 支援のスキーママッピングとパートナー加速</li>
 </ul>
 <hr>
-<h2 id="education">Education</h2>
+<h2 id="%E8%81%B7%E5%8B%99%E7%B5%8C%E6%AD%B4">職務経歴</h2>
+<p><strong>アプリケーションアーキテクト／フルスタック開発者</strong> – IBM 中国 – <em>現在</em></p>
 <ul>
-<li>Bachelor Degree in Electronics of Science and Technology – Huazhong University of Science and Technologys, 2003~2007</li>
+<li>グローバル EC の中国ローカライゼーションを主導。パフォーマンス最適化、データレジデンシー順守、地域 UX の適応を実現（<a href="project-glob_ecom-ja.html">プロジェクト</a>）。</li>
+<li>エージェント支援の EDI オンボーディング基盤を設計。AI 駆動のスキーマ正規化により EDIFACT／X12 のカノニカルマッピングを自動化（<a href="project-edi-ja.html">プロジェクト</a>）。</li>
+<li>保険営業向けに Agentforce ワークフローを開発し、データ入力、帳票検証、規制更新を自動化。</li>
+<li>マルチクラウド移行と DevSecOps を推進し、セキュリティ、可観測性、CI/CD の信頼性を向上。</li>
+</ul>
+<p><strong>共同創業者／テクニカルリード</strong> – SaasifyEase（日本） – <em>2023–現在（IBM と兼務・パートタイム）</em></p>
+<ul>
+<li>マルチテナントのエージェント型 AI ＋ RAG SaaS を設計・ローンチ。アクセス制御、ワークスペース分離、ナレッジ取り込み、検索オーケストレーションを実装（<a href="project-aihub-ja.html">プロジェクト</a>）。</li>
+<li>SEC 13F を対象とした金融開示解析パイプラインをエンドツーエンドで構築：取り込み → 正規化 → 埋め込み → ポートフォリオ洞察。</li>
+<li>飲食店向けの AI 駆動の注文・オペレーションシステムを提供。QR 注文、POS タブレット導線、ユーザー／スタッフ両向けの AI アシスタント（<a href="project-eatease-ja.html">プロジェクト</a>）。</li>
+<li>会話でデプロイ操作を行う実験的 DevOps エージェント（DeployBot）を作成 — ビルド、パッチ、再デプロイ、ログ要約（<a href="project-deploybot-ja.html">プロジェクト</a>）。</li>
+<li>ペット産業向けオムニチャネル基盤ローンチ。コンテンツ・アクティビティ・コマースを統合し、AI によるエンゲージメントを実装（<a href="project-pet_ecom-ja.html">プロジェクト</a>）。</li>
+</ul>
+<p><strong>ソフトウェアエンジニア</strong> – Mahong Network Tech – <em>2007–2014</em></p>
+<ul>
+<li>フィーチャーフォンから iOS／Android への移行期に、クロスプラットフォームのモバイルアプリを開発。</li>
+<li>再利用可能なモバイルフレームワークモジュールを提供し、アプリ配信を加速。</li>
+<li>UI 最適化、性能チューニング、反復的なリリースプロセスの改善を担当。</li>
 </ul>
 <hr>
-<h2 id="certifications">Certifications</h2>
+<h2 id="%E5%AD%A6%E6%AD%B4">学歴</h2>
 <ul>
-<li>Microsoft Certified: Azure AI Engineer Associate</li>
-<li>Certified Kubernetes Administrator (CKA)</li>
-<li>Certified SAFe® 6 Scrum Master</li>
-<li>JLPT N3 (2025), preparing for JLPT N2</li>
+<li>電子科学技術（学士） – Huazhong University of Science and Technology、2003〜2007</li>
+</ul>
+<hr>
+<h2 id="%E8%B3%87%E6%A0%BC%E3%83%BB%E8%AA%8D%E5%AE%9A">資格・認定</h2>
+<ul>
+<li>Microsoft 認定: Azure AI Engineer Associate</li>
+<li>Certified Kubernetes Administrator（CKA）</li>
+<li>SAFe® 6 Scrum Master 認定</li>
+<li>JLPT N3（2025）、JLPT N2 受験準備中</li>
 </ul>
 <hr>
 
