--- a/index-ja.html
+++ b/index-ja.html
@@ -366,7 +366,7 @@ code {
     });
   </script>
 <h1 id="joe">Joe</h1>
-<p>📍 🔗 <a href="https://www.linkedin.com/in/mi-zhou-46553092/">LinkedIn</a> | 💻 🔗 <a href="https://binartist.github.io/about-me/index.html">English CV</a> | <a href="https://binartist.github.io/about-me/index-ja.html">日本語版履歴書</a></p>
+<p>📍 🔗 <a href="https://www.linkedin.com/in/mi-zhou-46553092/">LinkedIn</a> | 🔗<a href="https://binartist.github.io/about-me/index-ja.html">日本語版履歴書</a> | 🔗 <a href="https://binartist.github.io/about-me/index.html">English CV</a></p>
 <hr>
 <h2 id="%E8%81%B7%E5%8B%99%E8%A6%81%E7%B4%84">職務要約</h2>
 <p>クラウドネイティブなシステム、エンタープライズ統合、そして LLM・ベクトル検索・リアルタイムアプリを組み合わせたエージェント型AIソリューションの設計に、18年以上の経験を持つイノベーティブなITリーダー。国際的なチームにおいて、スケーラブルな eコマース・金融・物流プラットフォームを継続して提供してきた実績。英語・中国語は流暢、日本語は中級。</p>
