--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ code {
     });
   </script>
 <h1 id="joe">Joe</h1>
-<h2 id="%F0%9F%93%8D-%F0%9F%94%97-linkedin--%F0%9F%94%97-english-cv-%F0%9F%94%97%E6%97%A5%E6%9C%AC%E8%AA%9E%E7%89%88%E5%B1%A5%E6%AD%B4%E6%9B%B8">📍 🔗 <a href="https://www.linkedin.com/in/mi-zhou-46553092/">LinkedIn</a> | 🔗 <a href="https://binartist.github.io/about-me/index.html">English CV</a> 🔗
+<h2 id="%F0%9F%93%8D-%F0%9F%94%97-linkedin--%F0%9F%94%97-english-cv--%F0%9F%94%97%E6%97%A5%E6%9C%AC%E8%AA%9E%E7%89%88%E5%B1%A5%E6%AD%B4%E6%9B%B8">📍 🔗 <a href="https://www.linkedin.com/in/mi-zhou-46553092/">LinkedIn</a> | 🔗 <a href="https://binartist.github.io/about-me/index.html">English CV</a> | 🔗
 <a href="https://binartist.github.io/about-me/index-ja.html">日本語版履歴書</a></h2>
 <h2 id="professional-summary">Professional Summary</h2>
 <p>Innovative IT leader with 18+ years designing cloud-native systems, enterprise integrations, and agentic AI solutions that combine LLMs, vector search, and real‑time apps. Proven track record delivering scalable e‑commerce, finance, and logistics platforms across international teams; fluent in English and Chinese, intermediate in Japanese.</p>
