--- a/project-deploybot-ja.html
+++ b/project-deploybot-ja.html
@@ -365,7 +365,7 @@ code {
           : 'default'
     });
   </script>
-<p><a href="index.html">&lt;&lt; Back to Index</a></p>
+<p><a href="index-ja.html">&lt;&lt; Back to Index</a></p>
 <h1 id="%E3%82%A8%E3%83%BC%E3%82%B8%E3%82%A7%E3%83%B3%E3%83%88%E5%9E%8B-ai-%E3%82%92%E6%B4%BB%E7%94%A8%E3%81%97%E3%81%9F%E5%AE%9F%E9%A8%93%E7%9A%84-devops-%E3%83%84%E3%83%BC%E3%83%AB">エージェント型 AI を活用した実験的 DevOps ツール</h1>
 <h2 id="%E6%A6%82%E8%A6%81">概要</h2>
 <p>コンテナ化アプリのビルド／デプロイ／テスト／実行時トラブルシュートを支援する、軽量の会話型 Web ツールです。</p>
