--- a/index-ja.html
+++ b/index-ja.html
@@ -365,7 +365,7 @@ code {
           : 'default'
     });
   </script>
-<h1 id="joe">Joe</h1>
+<h1 id="%E3%82%B7%E3%83%A5%E3%82%A6">シュウ</h1>
 <p>📍 🔗 <a href="https://www.linkedin.com/in/mi-zhou-46553092/">LinkedIn</a> | 🔗<a href="https://binartist.github.io/about-me/index-ja.html">日本語版履歴書</a> | 🔗 <a href="https://binartist.github.io/about-me/index.html">English CV</a></p>
 <hr>
 <h2 id="%E8%81%B7%E5%8B%99%E8%A6%81%E7%B4%84">職務要約</h2>
